--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -164,7 +164,18 @@
   institution = "Albert-Ludwigs-Universität"
 }
 
-@InProceedings{rintanen:m,
+@InProceedings{rintanen:m2010,
+  author = "J. Rintanen", 
+  title = "Heuristics for Planning with {SAT}",
+  pages = "414--428", 
+  booktitle = "Proc.\ 16th Int.\ Conf.\ on Principles and Practice of Contraint Programming",
+  editor = "D. Cohen",
+  address = "St.\ Andrews, Scotland",
+  year = "2010",
+  publisher = "Springer: {LNCS} 6308"
+}
+
+@InProceedings{rintanen:m2012,
     author = "J. Rintanen",
     title = "Engineering Efficient Planners with SAT",
     year = "2012",
