--- a/report/capitulos/capitulo1.tex
+++ b/report/capitulos/capitulo1.tex
@@ -176,14 +176,12 @@ artificial, los planificadores dependen de
 heurísticas de búsqueda para dar con las soluciones a problemas pequeños en un 
 período de tiempo razonable.
 
-%! Prueba?
 Una restricción interesante a PLANSAT es no permitir efectos negativos en las
 acciones. Si este es el caso, cualquier predicado instanciado que se haya 
 agregado permanece cierto durante todo el plan, de modo que no es necesario
 que el operador instanciado sea aplicado más de una vez.
 Esto tiene como consecuencia que PLANSAT sin efectos 
 negativos pertenezca a la clase NP \citep{ghallab:book}.
-%! duplicado aqui
 
 \section{Complejidad Descriptiva}
 La Teoría de Complejidad Descriptiva (TCD) es un área de investigación en la
@@ -267,7 +265,6 @@ y $\Q_i=\forall$ para todo $i\geq k$, entonces la sentencia
 pertenece al segmento \SOEA, y así sucesivamente.
 
 \subsection{Estructuras de primer orden}
-%! interpretación? explicar más?
 Las fórmulas lógicas son interpretadas con respecto a \textbf{estructuras de primer
 orden}. Una estructura de primer orden se define sobre la firma
 $\sigma=\tup{R_1^{a_1},\ldots,R_s^{a_s},\\c_1,\ldots,c_t}$, donde cada $R_i$ es
@@ -452,8 +449,8 @@ proposiciones la fórmula anterior más
 Finalmente, si es necesario que la función sea total debe agregarse
 \[ \psi_{tot} = (\forall x)(\exists y)(F(x, y)). \]
 
-Se utilizarán las abreviaciones de la siguiente tabla para denotar distintos
-tipos de funciones.
+Se utilizarán las abreviaciones siguientes para denotar distintos
+tipos de funciones:
 
 \begin{tabular}{ll}
 $(\exists F \in \text{Fun})$ & función total\\
