--- a/report/apendices/apendiceB.tex
+++ b/report/apendices/apendiceB.tex
@@ -7,8 +7,8 @@
 \begin{landscape}
 \begin{figure}[h]
 \centering
-\includegraphics[width=\textwidth]{figuras/arbolsintaxis.pdf}
-\caption{Árbol sintáctico que construye el \textit{parser} al analizar la
+\includegraphics[height=\textheight]{figuras/arbolsintaxis.pdf}
+\caption[Arbol sintáctico de $\Phi_{SAT}$]{Árbol sintáctico que construye el \textit{parser} al analizar la
 sentencia $\Phi_{SAT}$. Los nodos terminales se marcan con un óvalo.}
 \label{arbolsintactico}
 \end{figure}
